client/src/components/Navbar/query.scss
@import '../../variables';

@media all and (max-width: 768px) {
  .navbar-wrapper {
    .navbar-header {
      .nav-center {
        padding: 5px 10px;
      }

      .nav-right {
        position: fixed;
        flex-direction: column;
        justify-content: space-between;
        padding-bottom: 3rem;
        top: 0;
        bottom: 0;
        right: 0;
        width: 0px;
        overflow: hidden;
        background: $background;
        transition: $btn-hover;
        z-index: -1;

        &.active {
          width: 200px;
        }

        a:nth-child(1) {
          opacity: 1;
          padding-top: 101px;
        }

        .mobile-login {
          margin: 0;
          min-width: 115px;
        }

        .mobile-wrapper {
          min-width: 180px;
          display: flex;
          flex-direction: column;
          // width: 90%;
          margin: 0 auto;

          .mobile-img-wrapper {
            display: block;
            width: 90%;
            padding: 100px 0 1rem;
            margin: 0 auto;
            img {
              border-radius: 10px;
            }
          }

          a {
            display: flex;
            padding: 5px calc(5% + 4px);
            background: $background-two;

            &:hover {
              border-radius: 10px;
              margin: 0 5px;
              background: $primary-darkorange;
              opacity: 1;
            }
            
            i {
              display: block;
            }
          }
        }
      }

      .hamburger {
        display: block;
        z-index: 20;

        &.active {
          .bar:nth-child(2) {
            width: 25px;
            opacity: 0;
          }

          .bar:nth-child(1) {
            transform: translateY(8px) rotate(45deg);
          }
          
          .bar:nth-child(3) {
            width: 25px;
            transform: translateY(-8px) rotate(-45deg);
          }
        }
      }
    }
  }
}

